Fixed truncation when viewing left-to-right prerequisite tree in narrow viewports

--- a/website/src/views/modules/ModuleTree.scss
+++ b/website/src/views/modules/ModuleTree.scss
@@ -29,6 +29,7 @@ $connector-size: 0.75rem;
 .tree,
 .prereqTree {
   position: relative;
+  flex-shrink: 0;
   list-style: none;
   padding: 0;
   margin: 0.125rem 0;
